[gd_scene load_steps=15 format=3 uid="uid://b5wci2g0k74ao"]

[ext_resource type="Script" uid="uid://cfylymes5cvpd" path="res://scripts/CategorySelect.gd" id="1_rtvew"]
[ext_resource type="Texture2D" uid="uid://0carrwt0kfee" path="res://images/category_select_background.png" id="2_canog"]
[ext_resource type="Texture2D" uid="uid://bq0d8hihm2raj" path="res://images/back.png" id="3_5bo64"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5bo64"]
texture = ExtResource("2_canog")
modulate_color = Color(0.724643, 0.724643, 0.724643, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_canog"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rdbm"]
bg_color = Color(0.74558, 0.74558, 0.74558, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3qtm"]
bg_color = Color(0.529067, 0.529067, 0.529067, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtvew"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_canog"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bo64"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6rdbm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bn4fe"]
bg_color = Color(0.940551, 0.614064, 0.676375, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.964706, 0.85098, 0.266667, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
shadow_color = Color(0, 0, 0, 0.215686)
shadow_size = 5
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_khv0j"]
bg_color = Color(0.915248, 0.474789, 0.416205, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.964706, 0.85098, 0.266667, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
shadow_color = Color(0, 0, 0, 0.215686)
shadow_size = 5
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vu5i3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.964706, 0.85098, 0.266667, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
shadow_color = Color(0, 0, 0, 0.215686)
shadow_size = 5
shadow_offset = Vector2(4, 4)

[node name="CategorySelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_rtvew")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5bo64")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.0
offset_top = 219.0
offset_right = 202.0
offset_bottom = 325.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 45
text = "Wähle eine Kategorie"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -28.0
offset_right = 216.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="AnimalsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_canog")
theme_override_styles/hover = SubResource("StyleBoxFlat_6rdbm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w3qtm")
theme_override_styles/normal = SubResource("StyleBoxFlat_rtvew")
text = "Tiere"

[node name="FruitsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_canog")
theme_override_styles/hover = SubResource("StyleBoxFlat_6rdbm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w3qtm")
theme_override_styles/normal = SubResource("StyleBoxFlat_canog")
text = "Früchte"

[node name="VegetablesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_canog")
theme_override_styles/hover = SubResource("StyleBoxFlat_6rdbm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w3qtm")
theme_override_styles/normal = SubResource("StyleBoxFlat_5bo64")
text = "Gemüse"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 33.0
offset_top = 18.0
offset_right = 137.0
offset_bottom = 122.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_6rdbm")
theme_override_styles/hover = SubResource("StyleBoxFlat_bn4fe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_khv0j")
theme_override_styles/normal = SubResource("StyleBoxFlat_vu5i3")
icon = ExtResource("3_5bo64")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
